--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "babel-cli": "^6.2.0",
     "babel-core": "^6.1.2",
     "babel-preset-es2015": "^6.1.2",
+    "eslint": "^1.7.2",
+    "eslint-config-airbnb": "0.0.8",
     "nodemon": "^1.8.1"
   }
 }
